--- a/p5.html
+++ b/p5.html
@@ -20,7 +20,7 @@
     <h2>Así que procederé a insertarte un lorem</h2>
     <h3>Aunque le daré algo de formato por no hacerlo tan simple...</h3>
     <p>
-        <strong>Lorem ipsum</strong>, <i>dolor</i> <s>sit amet consectetur adipisicing elit</s>. <a href="https://imgs.search.brave.com/_iOjGqbJjMyqF8zK5cgpbRCoN0k0AVwVPSAZis-Sm7o/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS52b3pwb3B1bGku/Y29tLzIwMjMvMDkv/UEVEUk8tU0FOQ0hF/Wi1NQU5JRkVTVEFD/SU9ORVMtQU1OSVNU/SUEuanBlZw">Corrupti</a>, fuga ut necessitatibus perspiciatis inventore
+        <strong>Lorem ipsum</strong>, <i>dolor</i> <s>sit amet consectetur adipisicing elit</s>. <a href="https://w.forfun.com/fetch/53/5324723dbd76404c2cb12c0109e913c4.jpeg?h=1200&r=0.5">Corrupti</a>, fuga ut necessitatibus perspiciatis inventore
         debitis, voluptas provident repellat iste ipsa totam officia. Cupiditate incidunt, voluptatem id necessitatibus
         aliquam tempore libero!
     </p>
